--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,8 +6,8 @@ ARG USER_GID=$USER_UID
 
 ENV EMSDK /opt/emsdk
 
-RUN apt-get update \
-    && apt get install -y \
+RUN apt update \
+    && apt install -y \
     wget \
     ca-certificates \
     build-essential \
