--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,9 +11,8 @@ RUN apt update \
     wget \
     ca-certificates \
     build-essential \
-    python python-pip \
-    python3 python3-pip \
-	git-core \
+#   python3 python3-pip \
+#	git-core \
     # Create a non-root user to use if preferred - see https://aka.ms/vscode-remote/containers/non-root-user.
     && groupadd --gid $USER_GID $USERNAME \
     && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
