Create and populate emscripten checkout

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,7 +12,7 @@ RUN apt update \
     ca-certificates \
     build-essential \
 #   python3 python3-pip \
-#	git-core \
+	git \
     # Create a non-root user to use if preferred - see https://aka.ms/vscode-remote/containers/non-root-user.
     && groupadd --gid $USER_GID $USERNAME \
     && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
@@ -25,10 +25,12 @@ RUN apt update \
     #&& apt autoremove -y \
     #&& apt clean -y
 
-#RUN git clone https://github.com/emscripten-core/emsdk.git ${EMSDK} \
-#    && cd ${EMSDK} \
-#    # Fetch the latest version of the emsdk (not needed the first time you clone)
-#    && git pull
+RUN sudo mkdir ${EMSDK} && sudo chown ${USER_UID}:${USER_GID} ${EMSDK}
+
+RUN git clone https://github.com/emscripten-core/emsdk.git ${EMSDK} \
+    && cd ${EMSDK} \
+    # Fetch the latest version of the emsdk (not needed the first time you clone)
+    && git pull
 
 # Switch back to dialog for any ad-hoc use of apt-get
 ENV DEBIAN_FRONTEND=dialog
